[project]
name = "infra-fail-mngr"
version = "0.1.0"
description = "Infrastructure failure manager agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-describe>=3.1.0",
    "pytest-mock>=3.15.1",
]
